# mac-app

./: .gitignore  CMakeLists.txt  Makefile  README.md
projects/swiftui-cmake/: CMakeLists.txt
projects/swiftui-cmake/Sources/MacApp/: ContentView.swift  Info.plist  MacApp.swift
projects/swiftui-cmake/Sources/MacApp/Tasks/: CountdownTask.swift  FibonacciTask.swift  RandomFailTask.swift
projects/swiftui-cmake/Sources/MathBridge/: MathBridge.swift  module.modulemap.in
projects/swiftui-cmake/Sources/MathLib/: mathlib.c
projects/swiftui-cmake/Sources/TaskRunner/: AppTask.swift  ManagedTask.swift  TaskContext.swift  TaskManager.swift  TaskStatus.swift
projects/swiftui-cmake/Tests/MathBridgeTests/: mathlib_tests.c
projects/swiftui-spm/: Package.swift
projects/swiftui-spm/Sources/MacApp/: ContentView.swift  Info.plist  MacApp.swift  TaskManagerView.swift
projects/swiftui-spm/Sources/MathBridge/: MathBridge.swift
projects/swiftui-spm/Sources/MathLib/include/: mathlib.h
projects/swiftui-spm/Tests/MathBridgeTests/: MathBridgeTests.swift
projects/swiftui-spm/Tests/TaskRunnerTests/: TaskContextTests.swift  TaskManagerTests.swift
